Added basic styling

--- a/app/server/views/index.ejs
+++ b/app/server/views/index.ejs
@@ -3,9 +3,19 @@
 <head>
   <title>marty-chat-example</title>
   <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="/styles/index.css">
 </head>
 <body>
-  <div id="app"></div>
+  <nav class="navbar navbar-default">
+    <div class="container">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">Marty Chat Room</a>
+      </div>
+    </div>
+  </nav>
+  <div class="container">
+    <div id="app"></div>
+  </div>
   <script type="text/javascript" src="/javascripts/marty-chat-example.js"></script>
 </body>
 </html>
