--- a/app/server/views/index.ejs
+++ b/app/server/views/index.ejs
@@ -14,7 +14,9 @@
     </div>
   </nav>
   <div class="container">
-    <div id="app"></div>
+    <div id="app">
+      <%- body %>
+    </div>
   </div>
   <script type="text/javascript" src="/javascripts/marty-chat-example.js"></script>
 </body>
