--- a/app/server/views/index.ejs
+++ b/app/server/views/index.ejs
@@ -19,5 +19,6 @@
     </div>
   </div>
   <script type="text/javascript" src="/javascripts/marty-chat-example.js"></script>
+  <script type="text/javascript" src="/node_modules/marty-clipboard/dist/marty-clipboard.js"></script>
 </body>
 </html>
