Use Marty.createContainer and upgrade react-router

--- a/app/server/views/index.ejs
+++ b/app/server/views/index.ejs
@@ -9,7 +9,7 @@
   <nav class="navbar navbar-default">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">Marty Chat Room</a>
+        <a class="navbar-brand" href="/">Marty Chat Room</a>
       </div>
     </div>
   </nav>
