--- a/app/server/views/index.ejs
+++ b/app/server/views/index.ejs
@@ -18,6 +18,7 @@
       <%- body %>
     </div>
   </div>
+  <%- state %>
   <script type="text/javascript" src="/javascripts/marty-chat-example.js"></script>
   <script type="text/javascript" src="/node_modules/marty-clipboard/dist/marty-clipboard.js"></script>
 </body>
